[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
categories = []
description = "A multimap with at the same time keeps the total insertion ordering of all elements "
documentation = "https://docs.rs/total-order-multi-map"
keywords = ["map", "vec", "ordered"]
license = "MIT OR Apache-2.0"
name = "total-order-multi-map"
readme = "./README.md"
repository = "https://github.com/1aim/mail-codec/"
version = "0.3.0"

[dependencies]
stable_deref_trait = "1.0"
