[package]
authors = ["Philipp Korber <p.korber@1aim.com>"]
categories = ["data-structures"]
description = "A multimap with at the same time keeps the total insertion ordering of all elements "
documentation = "https://docs.rs/total-order-multi-map"
keywords = ["map", "vec", "ordered", "multimap"]
license = "MIT OR Apache-2.0"
name = "total-order-multi-map"
readme = "./README.md"
repository = "https://github.com/1aim/total-order-multi-map/"
version = "0.4.0-wip"

[dependencies]
stable_deref_trait = "1.0"
vec-drain-where = { git = "https://github.com/1aim/vec-drain-where.git" }
